# Yathra

./: .gitmodules
Yathra-Firmware/: CMakeLists.txt  README.md  serial_read.py
Yathra-Firmware/main/: CMakeLists.txt  idf_component.yml  main.cpp
Yathra-Firmware/main/src/: baro.cpp  baro.h  control.cpp  control.hpp  imu.cpp  imu.h  mission.cpp  mission.hpp  telemetry.cpp  telemetry.h  thruster.cpp  thruster.hpp
